Regression: Annotation lines lost AA #97872

Closed
opened 2022-05-05 03:36:09 +02:00 by Vyacheslav Kobozev · 14 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 473.04

Blender Version
Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-03 21:08, hash: e86b62f195
Worked: 3.2.0 Alpha, c486da0238bd, 2022-04-23 13:09

Bisecting points to 2a7a01b339

Short description of error
As title say.
All editors.
Grease pencil still have AA
58165706.png

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 473.04 **Blender Version** Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-03 21:08, hash: `e86b62f195` Worked: 3.2.0 Alpha, `c486da0238bd`, 2022-04-23 13:09 Bisecting points to 2a7a01b339 **Short description of error** As title say. All editors. Grease pencil still have AA ![58165706.png](https://archive.blender.org/developer/F13052279/58165706.png)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report.
I can confirm. Bisecting...

Hi, thanks for the report. I can confirm. Bisecting...
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Bisecting points to 2a7a01b339
cc @fclem

Bisecting points to 2a7a01b339 cc @fclem

Added subscriber: @mano-wii

Added subscriber: @mano-wii

My guess is that the uniform bool lineSmooth is no longer true by default.
Maybe a solution is to remove this uniform and fix #81827 (MacOS lines that should be thick are green instead) in another way.

My guess is that the `uniform bool lineSmooth` is no longer `true` by default. Maybe a solution is to remove this uniform and fix #81827 (MacOS lines that should be thick are green instead) in another way.

@mano-wii yes the uniform default value is no longer. Just setting the uniform everytime should be enough to fix it. I don't think it is wise to search other workarounds at this time.

@mano-wii yes the uniform default value is no longer. Just setting the uniform everytime should be enough to fix it. I don't think it is wise to search other workarounds at this time.

This issue was referenced by 470cbad51a

This issue was referenced by 470cbad51a63c56d8114ccfb3bb408b1d9cb4824

This issue was referenced by a0a99fb252

This issue was referenced by a0a99fb252843c11521d3c6ba14ffb26b3009598

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-05-06 16:08:05 +02:00

Still here 3.2.0 Beta, 502e1a44b948, 2022-05-11 16:03
Also brush shape lost AA, when it is aligned to surface
59194407.png

59204807.png

Still here 3.2.0 Beta, `502e1a44b948`, 2022-05-11 16:03 Also brush shape lost AA, when it is aligned to surface ![59194407.png](https://archive.blender.org/developer/F13071657/59194407.png) ![59204807.png](https://archive.blender.org/developer/F13071656/59204807.png)

It seems I forgot to add the solution for 3.2 (or I didn't realize the problem is reproducible there too).
Working on it...

It seems I forgot to add the solution for 3.2 (or I didn't realize the problem is reproducible there too). Working on it...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97872
No description provided.